<resources>
    <string name="app_name">Top Movies</string>
    <string name="poster_of_movie">Постер к фильму</string>
    <string name="popularity">Самые популярные</string>
    <string name="top_rated">Наиболее рейтинговые</string>
    <string name="add_to_favourite">Добавлено в избранное</string>
    <string name="delete_from_favourite">Удалено из избранного</string>
    <string name="item_main">Главная</string>
    <string name="item_favourite">Избранное</string>
    <string name="launch_trailer">Запустить Трейлер</string>
    <string name="big_poster_of_movie">Большой постер</string>
    <string name="name_of_movie">Название:</string>
    <string name="name_of_original_movie">Оригинальное название:</string>
    <string name="rating_of_movie">Рейтинг:</string>
    <string name="date_of_movie_release">Дата релиза:</string>
    <string name="overview_movie">Описание:</string>
    <string name="favourite_star">favourite_star</string>
</resources>